# LibgenComics

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py  treefmt.nix
libgen_api_comicvine/: __init__.py  collections_fix.py  libgen_search.py  search_request.py
libgencomics/: __init__.py  collections_fix.py  edition.py  lib.py  libgen_search.py  result_file.py  search_request.py  series.py
libgencomics/common/: __init__.py
libgencomics/errors/: __init__.py
libgencomics/libgen_objects/: __init__.py  edition.py  libgen_object.py  result_file.py  series.py
libgencomics/search/: __init__.py  libgen_search.py  search_request.py
libgencv/: __init__.py  edition.py  lib.py  libgen_search.py  result_file.py  search_request.py  series.py
test/: __init__.py  annas_urls.py  db_limit.py  manualcomicvine.py  manuallibgen.py  manualtesting.py  multi_issue.py  no_libgen_id.py  risky.py  single_issue.py  test_pytest.py  unsorted.py
