[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LibgenComics"
version = "0.0.1a1"
description = "Search Library genesis by Comicvine volume ID"
license = "MIT"
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "beautifulsoup4",
  "requests",
  "simyan"
]

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["simyan.*"]
follow_untyped_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "I", "U"]
lint.ignore = ["E501"]
