[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LibgenComics"
version = "0.1.0"
description = "Search Library genesis by Comicvine volume ID"
license-files = ["LICENSE"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3"
]
requires-python = ">=3.13"
dependencies = [
  "aiohttp",
  "beautifulsoup4",
  "requests",
  "simyan"
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = ["E", "F", "I", "U"]
lint.ignore = ["E501"]
